# haskell-holes-th

./: .gitignore  LICENSE  README.md  Test.hs  haskell-holes-th.cabal  shell.nix  stack.yaml
Language/Haskell/: Holes.hs
test/: Test.hs
