name:                haskell-holes-th
version:             1.0.0.0
synopsis:            Infer haskell code by given type.
description:         TIP solver for simply typed lambda calculus to automatically infer the code from type definitions using TemplateHaskell.
license:             MIT
license-file:        LICENSE
author:              klntsky
maintainer:          klntsky@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md, Test.hs
cabal-version:       >=1.10
homepage: https://github.com/klntsky/haskell-holes-th
source-repository head
  type: git
  location: git://github.com/klntsky/haskell-holes-th.git

library
  exposed-modules:     Language.Haskell.Holes
  other-extensions:    TemplateHaskell, CPP
  build-depends:       base, template-haskell, transformers
  default-language:    Haskell2010
  Hs-source-dirs:      ./

Test-Suite test
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      ./
  Main-Is:             Test.hs
  GHC-Options:         -Wall
  build-depends:       haskell-holes-th, base, template-haskell, transformers
  Default-Language:    Haskell2010
